--- a/src/App.css
+++ b/src/App.css
@@ -376,6 +376,12 @@ table th {
   margin-right: 0.6rem;
 }
 
+.user-container{
+ 
+  grid-template-columns: repeat(3, 1fr);
+
+}
+
 /* Mobile Styles */
 @media (max-width: 700px) {
   .hide-sm {
@@ -386,6 +392,12 @@ table th {
   .grid-3,
   .grid-4 {
     grid-template-columns: 1fr;
+  }
+
+  .user-container{
+ 
+    grid-template-columns: repeat(1, 1fr);
+  
   }
 
   /* Text Styles */
