--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,12 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #dc3545;
-  --dark-color: #333333;
-  --light-color: #f4f4f4;
+  --primary-color: #000000;
+  --dark-color: #202020;
+  --light-color: #333333;
   --danger-color: #dc3545;
   --success-color: #28a745;
+  --constrast-color: #425fbb;
 }
 
 * {
@@ -19,7 +20,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
+  background-color: var(--dark-color);
   color: #333;
 }
 
@@ -29,7 +30,7 @@ a {
 }
 
 a:hover {
-  color: #666;
+  color: #ccc;
 }
 
 ul {
@@ -112,8 +113,10 @@ img {
 /* Cards */
 .card {
   padding: 1rem;
-  border: #ccc 1px dotted;
+  border: #464646 1px dotted;
   margin: 0.7rem 0;
+  background: #000;
+  color: #5d5d5d;
 }
 
 /* List */
@@ -224,6 +227,8 @@ img {
   font-size: 0.8rem;
   padding: 0.3rem 1rem;
   margin-right: 0.2rem;
+  width: 70%;
+  border-radius: 20px;
 }
 
 .badge {
@@ -258,14 +263,14 @@ img {
 .badge-light,
 .alert-light {
   background: var(--light-color);
-  color: #333;
+  color: #ccc;
 }
 
 .btn-dark,
 .bg-dark,
 .badge-dark,
 .alert-dark {
-  background: var(--dark-color);
+  background: var(--constrast-color);
   color: #fff;
 }
 
@@ -326,9 +331,12 @@ select,
 textarea {
   display: block;
   width: 100%;
-  padding: 0.4rem;
-  font-size: 1.2rem;
-  border: 1px solid #ccc;
+  padding: .8rem 1rem 0.6rem;
+  font-size: 1rem;
+  border: 1px solid #636363;
+  background: #313131;
+  color: #848484;
+  border-radius: 50px;
 }
 
 input[type='submit'],
@@ -344,6 +352,14 @@ table td {
 
 table th {
   background: var(--light-color);
+}
+
+/* box home */
+.box-home {
+  padding: 12px;
+  background: #101010;
+  color: #828282;
+  border: 1px solid #313131;
 }
 
 /* Navbar */
